--- a/css/main.css
+++ b/css/main.css
@@ -433,6 +433,15 @@ header nav ul li a:hover{color: #FFF;}
 }
 footer h3{margin:0;margin-bottom:15px;}
 footer .form-group{margin-bottom: 0;}
+footer .form-group.select-content p {
+    color: #FFF;
+}
+footer .form-group.select-content select {
+    display: block;
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+}
 footer .form-group+.form-group{margin-top:30px;}
 footer input{height:49px!important}
 footer .btn{color:#33354E!important;background:#0cebeb;border-color: #0cebeb;/* margin-top: 40px; */}
@@ -641,14 +650,17 @@ section#encuentranos{z-index: 2}
     height: auto;
     padding: 30px 30px 0;
 }
-.grid-product .product span{
+.grid-product .product p{
     display: inline-block;
     padding: 5px 15px;
     background: #33354e;
     color: #FFF;
     max-width: 206px;
+    margin: 0;
 }
-
+.tabs-content {
+    margin-top: 100px;
+}
 .tabs-content .tabs-list ul {
     display: flex;
     flex-direction: row;
@@ -672,6 +684,7 @@ section#encuentranos{z-index: 2}
     border-radius: 5px;
     color: #FFF;
     opacity: .5;
+    cursor: pointer;
 }
 .tabs-content .tabs-list li a.active {
     opacity: 1;
@@ -689,4 +702,66 @@ section#encuentranos{z-index: 2}
     display: block;
     opacity: 1;
     bottom: 0;
+}
+
+.detail-product {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    margin: 100px -15px 0;
+}
+.detail-product .product-img{
+    max-width: 350px;
+}
+.detail-product .product-description,
+.detail-product .product-img{
+    order: 0;
+    flex: 1 1 auto;
+    align-self: auto;
+    padding: 0 15px;
+    width: 100%;
+}
+
+.detail-product .product-img img{}
+
+
+.detail-product .list-horizontal{}
+
+.photos-products {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    margin: 0 -15px;
+}
+.photos-products .photo,
+.photos-products .text{
+    order: 0;
+    flex: 1 1 auto;
+    align-self: auto;
+    width: 100%;
+    padding: 0 15px;
+}
+.photos-products .photo{
+    width: 350px;
+}
+.photos-products .photo img{
+    border-radius: 50%;
+}
+.photos-products .text{}
+.photos-products .text p {margin: 0;}
+.content-photos-products {margin: 60px 0;max-width: 600px;}
+.content-photos-products .photos-products + .photos-products {
+    margin-top: 60px;
+}
+.content-photos-products .photos-products:nth-child(even) .photo{
+    order: 2;
+}
+.content-photos-products .photos-products:nth-child(even) .text{
+    order: 1;
+    text-align: right
 }
