--- a/css/main.css
+++ b/css/main.css
@@ -642,7 +642,8 @@ section#encuentranos{z-index: 2}
     width: 100%;
     max-width: 33.33333333%;
     padding: 15px;
-    text-align: center
+    text-align: center;
+    position: relative;
 }
 .grid-product .product img {
     display: block;
@@ -657,6 +658,17 @@ section#encuentranos{z-index: 2}
     color: #FFF;
     max-width: 206px;
     margin: 0;
+}
+.grid-product .product p a {display: block}
+.grid-product .product p a:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    z-index: 1;
 }
 .tabs-content {
     margin-top: 100px;
@@ -753,10 +765,10 @@ section#encuentranos{z-index: 2}
     border-radius: 50%;
 }
 .photos-products .text{}
-.photos-products .text p {margin: 0;}
+.photos-products .text p {margin: 0;color: #02B4B6;}
 .content-photos-products {margin: 60px 0;max-width: 600px;}
 .content-photos-products .photos-products + .photos-products {
-    margin-top: 60px;
+    margin-top: 20px;
 }
 .content-photos-products .photos-products:nth-child(even) .photo{
     order: 2;
@@ -764,4 +776,26 @@ section#encuentranos{z-index: 2}
 .content-photos-products .photos-products:nth-child(even) .text{
     order: 1;
     text-align: right
+}
+.list-description {
+    margin: 0;
+    padding: 0;
+}
+.list-description li {
+    list-style: none;
+}
+.list-description p b{display: block}
+
+.list-connection {
+    padding: 0;
+    margin: 0 0 50px;
+}
+.list-connection li {
+    list-style: none;
+}
+.list-connection li + li{
+    margin-top: 15px;
+}
+.list-connection li img{
+    margin-right: 15px;
 }
