agregado de img y nuevo layaout para productos

--- a/css/main.css
+++ b/css/main.css
@@ -736,12 +736,11 @@ section#encuentranos{z-index: 2}
     padding: 0 15px;
     width: 100%;
 }
-
-.detail-product .product-img img{}
-
-
-.detail-product .list-horizontal{}
-
+.content-photos-products,
+.list-description,
+.list-connection {
+    margin-top: 60px;
+}
 .photos-products {
     display: flex;
     flex-direction: row;
@@ -759,6 +758,9 @@ section#encuentranos{z-index: 2}
     width: 100%;
     padding: 0 15px;
 }
+.photos-products .text b{
+    display: block;
+}
 .photos-products .photo{
     width: 350px;
 }
@@ -766,12 +768,9 @@ section#encuentranos{z-index: 2}
     border-radius: 50%;
     border: solid 6px #02B4B6;
 }
-.photos-products .text{}
 .photos-products .text p {margin: 0;color: #02B4B6;}
-.content-photos-products {margin: 60px 0;max-width: 600px;}
-.content-photos-products .photos-products + .photos-products {
-    margin-top: 20px;
-}
+.content-photos-products {max-width: 600px;}
+
 .content-photos-products .photos-products:nth-child(even) .photo{
     order: 2;
 }
@@ -779,7 +778,7 @@ section#encuentranos{z-index: 2}
     order: 1;
     text-align: right
 }
-.list-description {
+.list-description ul {
     margin: 0;
     padding: 0;
 }
@@ -788,7 +787,7 @@ section#encuentranos{z-index: 2}
 }
 .list-description p b{display: block}
 
-.list-connection {
+.list-connection ul {
     padding: 0;
     margin: 0 0 50px;
 }
