--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,8 +73,13 @@
     
     .flex_formulario{margin-bottom: 150px;-webkit-box-orient: vertical;-webkit-box-direction: normal;-ms-flex-direction: column;flex-direction: column;margin-top: 150px;}
 
-    #contacto .gradiant{position:absolute;}
     #contacto .slider > .flex_center{position:relative;}
+    .grid-product,.detail-product {flex-wrap: wrap;}
+    .grid-product .product {max-width: 50%}
+    .detail-product .product-description, .detail-product .product-img {max-width: 100%;width: 100%;}
+    .detail-product .product-img img {margin: 0 auto;}
+    .product-description h2,
+    .product-description h2 + p{text-align: center}
 }
 @media (max-width: 768px) {
     .slider .arrow_down{display: none;}
@@ -103,6 +108,7 @@
     .show_section .flex_container_description.establecimientos .flex_item h2{display: none;}
     .show_section .flex_container_description.establecimientos .flex_item p{display: none;}
     .show_section .flex_container_description.establecimientos .flex_item .tech_item{padding:0;}
+    .grid-product .product {max-width: 100%}
 } 
 @media (max-width: 480px) {
     *{font-size:14px;}
