--- a/css/main.css
+++ b/css/main.css
@@ -353,7 +353,21 @@ header nav ul li a:hover{color: #FFF;}
         -ms-flex-align: start;
             align-items: flex-start;
 }
-
+.slider_principal .slider{
+    height: 100vh;
+}
+section.slider_principal:after{
+    content:"";
+    background: url(../img/montevideo.jpg) no-repeat center;
+    background-size: 90% auto;
+    display: block;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 .flex_container_description .flex_item {
     -webkit-box-ordinal-group: 1;
         -ms-flex-order: 0;
@@ -502,23 +516,11 @@ ul.social li svg{display: block;width: 30px;height: auto}
     border-radius: 5px;
     -webkit-transition: all 250ms ease-in;
     transition: all 250ms ease-in;
-    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="-77.74000000000001 71.52 7.22 0 0 21.259999999999998 -27.48 7.22 0 0 21.259999999999998 71.52 -91.78 0 0 0 0 0 1 0" /></filter></svg>#filter');
-    -webkit-filter: grayscale(100);
-            filter: grayscale(100);
     width: 100%;
     height: auto;
-    opacity: 0.3;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)"
 }
 .gallery .flex_item img:hover{
     box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -30px -29px 80px 0px rgba(2, 180, 182, 0.3), 25px 20px 130px -5px rgba(47, 55, 150, 0.6);
-    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" /></filter></svg>#filter');
-    -webkit-filter: grayscale(0);
-            filter: grayscale(0);
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1);
-    opacity: 1;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"
 }
 
 section#cargador{z-index: 4}
@@ -807,4 +809,9 @@ section#encuentranos{z-index: 2}
 }
 .list-connection li img{
     margin-right: 15px;
+}
+.clientes_tab {margin-top: 50px;}
+
+.mapa_tab .tlf{
+    max-width: 400px;
 }
