--- a/css/main.css
+++ b/css/main.css
@@ -510,18 +510,28 @@ ul.social li svg{display: block;width: 30px;height: auto}
 .gallery {margin-top: 150px;}
 .gallery .flex_container_description .flex_item{
     padding: 15px;
-    width: 50%;
+    width: 25%;
 }
 .gallery .flex_item img{
     display: block;
-    border-radius: 5px;
+    border-radius: 10px;
     -webkit-transition: all 250ms ease-in;
     transition: all 250ms ease-in;
     width: 100%;
     height: auto;
+    border: 5px solid #FFF;
+    box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.32), 0 0 10px 0px rgba(2, 180, 182, 0.3), 0 0 10px 0px rgba(47, 55, 150, 0.6);
+    cursor: pointer;
 }
 .gallery .flex_item img:hover{
-    box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -30px -29px 80px 0px rgba(2, 180, 182, 0.3), 25px 20px 130px -5px rgba(47, 55, 150, 0.6);
+    box-shadow: 0 0 30px 0px rgba(255, 255, 255, 0.32), -10px -8px 30px 0px rgba(2, 180, 182, 0.3), 10px 5px 50px -5px rgba(47, 55, 150, 0.6);
+}
+.gallery .flex_container_description {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 section#cargador{z-index: 4}
@@ -815,4 +825,20 @@ section#encuentranos{z-index: 2}
 
 .mapa_tab .tlf{
     max-width: 400px;
+}
+.featherlight .featherlight-content {
+    overflow: initial;
+    padding: 10px;
+    margin-bottom: 0;
+    border: 0;
+}
+.featherlight .featherlight-close-icon {
+    background: #02B4B6;
+    padding: 5px;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    top: -20px;
+    right: -20px;
+    color: #FFF;
 }
